--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header {
   background-color: #4aa94d;
   color: #fff;
   text-align: center;
-  margin-right: 70px;
+  margin-right: 10px;
 }
 
 /* ------toggle menu btn-----  */
@@ -142,26 +142,30 @@ header {
   background-color: #4aa94d;
   margin-left: 40px;
   margin-bottom: 1em;
+  transition: transform 0.5s ease;
 }
-
+.solegan button:hover {
+  transform: translate(10px);
+  box-shadow: 0 0 5px rgba(0, 0, 0, 0.7);
+}
 .client {
   width: 100%;
   height: 250px;
-  padding: 10px;
-  background-color: #faf5fa;
+  padding: 20px;
+  background-color: #f5f7fa;
 }
 
 #clients {
   max-width: 1400px;
   display: flex;
   flex-direction: column;
-  padding: 20px;
   margin: auto;
-  background-color: #faf5fa;
 }
 
+/* ------licons sections---- */
 #clients div {
   text-align: center;
+  background-color: #f5f7fa;
 }
 
 #clients h2 {
@@ -176,72 +180,74 @@ header {
   margin-top: 5px;
 }
 
-.icons_clients {
+.client .icons_clients {
   width: 100%;
   padding: 40px;
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
-  gap: 50px;
   margin: auto;
-  background-color: #f5f7fa;
 }
 
 .icons_clients img {
-  max-width: 120px;
   margin: auto;
   transition: transform 0.3s ease;
 }
+
 .icons_clients img:hover {
   transform: translateY(-10px);
 }
 .manage {
   text-align: center;
   line-height: 1.3;
-  margin-top: 0;
+  background-color: #f5f7fa;
+}
+.manage div {
+  max-width: 1400px;
+  padding: 20px;
+  margin: auto;
   background-color: #f5f7fa;
 }
 
+/* -----card----- */
 .container-card {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  gap: 40px;
-  margin-top: 2rem;
+  gap: 50px;
   background-color: #f5f7fa;
   margin: 10px auto;
-  padding: 2em;
+  padding: 20px;
 }
 
 .card {
-  min-width: 280px;
-  max-width: 320px;
-  height: 200px;
-  padding: 10px;
+  min-width: 250px;
+  max-width: 300px;
+  height: 220px;
+  padding: 20px 10px;
   border: none;
-  background: white;
+  background: #f1f3f6;
   text-align: center;
-  transition: transform 0.3s ease;
+  transition: transform 1s ease;
 }
 .card:hover {
   transform: scale(1.1);
-  box-shadow: 0 0px 10px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 0px 5px rgba(0, 0, 0, 0.3);
 }
 .card h3 {
   margin-bottom: 10px;
-  line-height: 1;
+  line-height: 0.8;
 }
 .card p {
-  line-height: 1;
+  font-size: 14px;
+  line-height: 1.4;
 }
 
 section {
   width: 100%;
   padding: 10px;
   background-color: #f5f7fa;
-  /* background-color: #e5e5e5; */
 }
 .main {
   width: 1400px;
@@ -285,6 +291,134 @@ section {
 .text-ad-btn button:hover {
   transform: scale(1.1);
 }
+
+/* ----footer----- */
+
+footer {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 5px;
+  padding: 30px;
+  margin: 0 0.7em;
+  background-color: rgb(53, 67, 76);
+}
+.footer-div{
+  max-width: 1400px;
+  display: flex;
+  justify-content: center;
+  margin: auto;
+}
+
+.footer-div > div {
+  min-width: 280px;
+  max-width: 320px;
+  margin: 0 auto;
+  padding: 20px;
+}
+.social_links .img-logo {
+  display: flex;
+  margin-bottom: 20px;
+}
+.social_links h3 {
+  font-size: 1.5rem;
+  color: #e4e4e4;
+}
+
+.social_links p {
+  font-size: 0.9rem;
+  color: #979797;
+  line-height: 1.5;
+  text-transform: lowercase;
+}
+
+#social-icons img {
+  width: 25px;
+  margin-top: 30px;
+  margin-right: 0.3em;
+  transition: transform 1s ease;
+}
+
+#social-icons img:hover {
+  cursor: pointer;
+  transform: translateY(-30%);
+}
+.navigation h3 , .support h3 , .navigation_address  h3{
+  color: #e4e4e4;
+  font-size: 1rem;
+  margin-bottom: 1.4rem;
+}
+
+.navigation li , .support li{
+  font-size: 0.8rem;
+  
+  color: #979797;
+  list-style: none;
+  line-height: 1.8;
+}
+
+.navigation li img {
+  width: 10px;
+}
+
+.navigation_address h3 {
+  margin-bottom: 1rem;
+  color: #fff;
+  font-size: 1rem;
+}
+
+.navigation_address input {
+  margin-bottom: 0.2em;
+  width: 200px;
+  padding: 8px 8px;
+  border: none;
+  border-radius: 4px;
+  background-color: #4d4d4d;
+  color: #fff;
+  font-size: 0.8rem;
+}
+
+.navigation_address img {
+  margin-left: -30px;
+  width: 20px;
+}
+
+.projects p {
+  font-size: 1rem;
+  color: #ffffff;
+}
+
+.projects img {
+  width: 60%;
+  margin-top: 1rem;
+}
+
+/* footer{
+  padding: 30px 60px;
+  background-color: #2f2f2f;
+  display: flex;
+  justify-content: space-between;
+}
+.footers{
+  max-width: 1400px;
+  margin: auto;
+}
+.footer >div{
+  min-width: 250px;
+  max-width: 300px;
+  height: 220px;
+  padding: 20px 10px;
+  border: none;
+  background: #f1f3f6;
+  text-align: center;
+}
+.footer .logo-icon{
+  display: flex;
+  text-align: center;
+} */
+
 @media (max-width: 768px) {
   .icons_clients {
     gap: 20px;
@@ -302,7 +436,7 @@ section {
 
   .footer-container {
     background-color: #4aa94d;
-  } */
+  }
 }
 @media (max-width: 768px) {
   .nav-links {
